latex update - postgres cz.1

--- a/INZ/latex/praca.tex
+++ b/INZ/latex/praca.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{aghdpl}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage[dvipsnames]{xcolor}
 % \documentclass[language=en,11pt]{aghdpl}  % praca w języku angielskim
 
 %---------------------------------------------------------------------------
