--- a/INZ/latex/rozdzial2.tex
+++ b/INZ/latex/rozdzial2.tex
@@ -8,6 +8,33 @@ W rozdziale tym przedstawiono informację o technologiach wykorzystanych przy tw
 \section{PostgreSQL}
 \label{sec:PSQL}
 
+    PostgreSQL jest jednym z najpopularniejszych systemów bazo-danowych i numerem jeden wśród rozwiązań open-source. 
+
+    \begin{table}[H]
+    \begin{center}
+        \caption{Ranking najpopularniejszych systemów bazo-danowych wg. db-engines.com \cite{DbEg01}}
+        \begin{tabular}{|c|c|c|c|}
+            \hline
+            Ranking & Nazwa & Wynik & Zmiana \\
+            \hline
+            1 & Oracle  & 1309.45 & \textcolor{Green}{+22.85} \\
+            \hline
+            2 & My SQL & 1022.76 & \textcolor{Red}{-6.73}  \\
+            \hline
+            3 & Microsoft SQL Server & 802.09 & \textcolor{Red}{-5.67} \\
+            \hline
+            4 & PostgreSQL & 652.16 &  \textcolor{Green}{+7.80} \\
+            \hline
+            5 & MongoDB & 405.21 & \textcolor{Red}{-5.02} \\
+            \hline
+        \end{tabular}
+        \end{center}
+    \end{table}
+
+    Ranking jest wyliczana na podstawie wielu czynników, takich jak dane z Google Trends, pytań na Stack Overflow lub ofert pracy. Z danych wynika że PostgreSQL jest najbardziej popularnych rozwiązaniem open-source, i jako jedyny poza widocznym liderem - Oracle nie traci na popularności.
+
+    Postgres jest systemem relacyjnym, skupionym na zgodnościa ze standarem SQL. 
+
 
 %---------------------------------------------------------------------------
 
