--- a/INZ/latex/aghdpl.cls
+++ b/INZ/latex/aghdpl.cls
@@ -313,7 +313,8 @@
 	language=autobib,
 	autolang=other,
 	% Zapisuj datę dostępu do strony WWW w formacie RRRR-MM-DD.
-	urldate=iso8601,
+    urldate=iso,
+    seconds=true,
 	% Nie dodawaj numerów stron, na których występuje cytowanie.
 	backref=false,
 	% Podawaj ISBN.
