--- a/INZ/latex/rozdzial1.tex
+++ b/INZ/latex/rozdzial1.tex
@@ -11,16 +11,16 @@
 
     \begin{figure}
         \centering
-        \includegraphics[width=0.8\textwidth]{imgs/WTSS.png}
+        \includegraphics[width=1\textwidth]{imgs/WTSS.png}
         \caption{Zrzut ekranu z rozgrywki}
     \end{figure}
 
     \begin{figure}
         \centering
         \includegraphics[width=0.8\textwidth]{imgs/wykres_graczy.png}
-        \caption{Wykres liczby graczy online w jednej chwili
+        \caption{Wykres liczby graczy online w jednej chwili.
             Na wykresie znajdują się jedynie dane z platformy Steam, dlatego są one mocno niedoszacowane. Wydawca podaje dane na poziomie 100 – 150 tysięcy graczy online
-            (źródło: steamcharts.com)}
+            (źródło: steamcharts.com \cite{StCh01})}
     \end{figure}
 
 .
@@ -59,5 +59,3 @@
 \label{sec:zawartoscPracy}
 
 W rozdziale~\ref{cha:Tech} przedstawiono opis wykorzystanych w pracy technologii
-
-Jeszcze kilka odnośników do bibliografii \cite{PeDa04,BuDo03}.
